# cxx_learning

cxx11/: auto.cc  auto_temp.cc  constexpr.cc  for.cc  lambda.cc  left_value.cc
cxx98/: cls.cc  templete.cc
effective_modern_cxx/: CMakeLists.txt
effective_modern_cxx/item1/: 1.cpp  2.cpp  CMakeLists.txt
gtest/: CMakeLists.txt  README.md
gtest/include/: Checkout.hpp  stack.hpp
gtest/src/: CMakeLists.txt  Checkout.cpp  main.cpp  stack.cpp
gtest/tests/: CMakeLists.txt  CheckoutTest.cpp  StackTest.cpp
huahua_moderncxx/initializer_list/: initializer_list.cpp
